<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_node_c_monitoring"
        android:title="@string/menu_item_bottom_navigation_monitoring_es"
        android:enabled="true"
        android:icon="@drawable/ic_monitor_icon_menu_item">
    </item>

    <item
        android:id="@+id/page_node_c_plot"
        android:title="@string/menu_item_bottom_navigation_plot_es"
        android:enabled="true"
        android:icon="@drawable/ic_graph_icon_menu_item">
    </item>

    <item
        android:id="@+id/page_node_c_child_nodes"
        android:title="@string/menu_item_bottom_navigation_np_es"
        android:enabled="true"
        android:icon="@drawable/ic_child_node_icon_menu_item">
    </item>

    <item
        android:id="@+id/page_node_c_log"
        android:title="@string/menu_item_bottom_navigation_log_es"
        android:enabled="true"
        android:icon="@drawable/ic_log_icon_menu_item">
    </item>

    <item
        android:id="@+id/page_node_c_info"
        android:title="@string/menu_item_bottom_navigation_info_es"
        android:enabled="true"
        android:icon="@drawable/ic_info_icon_menu_item">
    </item>
</menu>