<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sing_in_activity_background"
    tools:context=".usecases.session.signin.SignIn">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/textview_create_accnt_es"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="430dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_name_es"
        android:inputType="textPersonName"
        android:background="@drawable/custom_input_edit_text_register"
        android:elevation="4dp"
        android:textColor="@color/white"
        android:textColorHint="@color/texthint_register_forn"
        android:drawableStart="@drawable/custom_person_icon"
        android:paddingStart="12dp"
        android:drawablePadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input_edit_text_register"
        android:drawableStart="@drawable/custom_email_icon_r"
        android:drawablePadding="12dp"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/hint_email_es"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/texthint_register_forn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input_edit_text_register"
        android:drawableStart="@drawable/custom_block_icon_r"
        android:drawablePadding="12dp"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/hint_pass_es"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/texthint_register_forn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input_edit_text_register"
        android:drawableStart="@drawable/custom_block_icon_r"
        android:drawablePadding="12dp"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/hint_re_pass_es"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/texthint_register_forn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        style="@style/Buttons2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/button_sing_in_es"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/textview_join_us_es"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>